# MCP_Project

./: .gitignore  README.md  pyproject.toml  test_weather.py
server/: client.py  weather.json  weather.py
